@@ -1,3 +1,9 @@
+2012-06-04  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* w3m-util.el (w3m-force-mode-line-update): New alias.
+
+	* w3m-lnum.el (w3m-with-lnum, w3m-lnum-universal-dispatch): Use it.
+
 2012-06-03  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* w3m.el (w3m-create-page): Improve regexp matching `Google Analytics
